objects/vlocity_cmt__InventoryItemDecompositionRelationship__c.object
<CustomObject>
    <description>InventoryItemDecompositionRelationship</description>
    <fields>
        <fullName>vlocity_cmt__DestinationInventoryItemId__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Destination Inventory Item</description>
        <label>Destination Inventory Item</label>
        <referenceTo>vlocity_cmt__InventoryItem__c</referenceTo>
        <relationshipLabel>InventoryItemDecompositionRelationships</relationshipLabel>
        <relationshipName>InventoryItemDecompositionRelationships</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__SourceAssetId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Source Asset</description>
        <label>Source Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>InventoryItemDecompositionRelationships</relationshipLabel>
        <relationshipName>InventoryItemDecompositionRelationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__SourceInventoryItemId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Source Inventory Item</description>
        <label>Source Inventory Item</label>
        <referenceTo>vlocity_cmt__InventoryItem__c</referenceTo>
        <relationshipLabel>InventoryItemDecompositionRelationships (Source Inventory Item)</relationshipLabel>
        <relationshipName>InventoryItemDecompositionRelationships1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Inventory Item DecompositionRelationship</label>
    <nameField>
        <label>InventoryItemDecompositionRelationship N</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>InventoryItemDecompositionRelationships</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>